[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isaac_backup"
version = "0.0.1"
authors = [
  { name="Trevor F. Freeman", email="tfreem10@utk.edu" },
]
description = "Handle backups on UT's ISAAC HPC system."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.scripts]
isaac-backup = "isaac_backup.main:main"

[project.urls]
Homepage = "https://github.com/utia-gc/isaac-backup"
Issues = "https://github.com/utia-gc/isaac-backup/issues"
